# CompSec

Lab1_Fuzzing/: README.md
Lab1_Fuzzing/misc/: a.out  filereader.c
Lab1_Fuzzing/misc/task2_output/: .cur_input  cmdline  fuzz_bitmap  fuzzer_stats  plot_data
Lab1_Fuzzing/misc/task2_output/crashes/: README.txt  id:000000,sig:11,src:000000,time:12,op:flip1,pos:0  id:000001,sig:11,src:000000,time:48,op:flip1,pos:1  id:000002,sig:11,src:000000,time:86,op:flip1,pos:2  id:000003,sig:11,src:000000,time:205,op:flip1,pos:7  id:000004,sig:11,src:000000,time:316,op:flip1,pos:12  id:000005,sig:11,src:000000,time:399,op:flip1,pos:17  id:000006,sig:11,src:000000,time:1037,op:flip16,pos:6  id:000007,sig:11,src:000000,time:1095,op:flip32,pos:17  id:000008,sig:11,src:000000,time:2848,op:int16,pos:0,val:-128  id:000009,sig:11,src:000000,time:2887,op:int16,pos:1,val:be:-128  id:000010,sig:11,src:000000,time:2934,op:int16,pos:2,val:be:-128  id:000011,sig:11,src:000000,time:3095,op:int16,pos:7,val:-128  id:000012,sig:11,src:000000,time:3096,op:int16,pos:7,val:be:-128  id:000013,sig:11,src:000000,time:3194,op:int16,pos:10,val:be:-128  id:000014,sig:11,src:000000,time:3259,op:int16,pos:12,val:be:-128  id:000015,sig:11,src:000000,time:3526,op:int32,pos:0,val:-128  id:000016,sig:11,src:000000,time:3673,op:int32,pos:2,val:-128  id:000017,sig:11,src:000000,time:3700,op:int32,pos:2,val:be:-32768  id:000018,sig:11,src:000000,time:4000,op:int32,pos:7,val:be:-32768  (+29 more)
Lab1_Fuzzing/misc/unrtf-0.21.5/: AUTHORS  ChangeLog  Makefile  Makefile.in  NEWS  config.h  config.status  configure  configure.ac
Lab1_Fuzzing/misc/unrtf-0.21.5/doc/: Makefile  (+3 more)
Lab1_Fuzzing/misc/unrtf-0.21.5/tests/: .~lock.font_styles.rtf#  Makefile  Makefile.am  Makefile.in  opensymbols.rtf.html  opensymbols.rtf.tex  pictNotIgnored.rtf  pictNotIgnored.rtf.html  pictNotIgnored.rtf.tex  unnested.rtf.html  unnested.rtf.tex
Lab1_Fuzzing/txt_files/: fuzz1.txt  fuzz10.txt  fuzz100.txt  fuzz11.txt  fuzz12.txt  fuzz13.txt  fuzz14.txt  fuzz15.txt  fuzz16.txt  fuzz17.txt  fuzz18.txt  fuzz19.txt  fuzz2.txt  fuzz20.txt  fuzz21.txt  fuzz22.txt  fuzz23.txt  fuzz24.txt  fuzz25.txt  fuzz26.txt  fuzz27.txt  fuzz28.txt  fuzz29.txt  fuzz3.txt  fuzz30.txt  fuzz31.txt  fuzz32.txt  fuzz33.txt  fuzz34.txt  fuzz35.txt  fuzz36.txt  fuzz37.txt  fuzz38.txt  fuzz4.txt  fuzz41.txt  fuzz42.txt  fuzz43.txt  fuzz44.txt  fuzz46.txt  fuzz49.txt  (+54 more)
Lab2_Network/: README.md  fake.json  index.html
Lab2_Network/task2_bruteforcer/: mutator.py
(+456 files in other folders)
